# extractstrings

./: CMakeLists.txt  filehandler.cpp  filehandler.h  main.cpp  runoptions.cpp  runoptions.h  statistics.h
extractstrings/: CMakeLists.txt  main.cpp
tests/: testfilehandler.cpp
